Fixed spacing issues if there are no links for a paper

--- a/stylesheets/_page.scss
+++ b/stylesheets/_page.scss
@@ -311,6 +311,10 @@ iframe[src*="youtube"] {
 
 .papers {
   ul {
+    & > li {
+      margin: 13px 0;
+    }
+
     .title {
       display: block;
       font-weight: bold;
@@ -324,6 +328,7 @@ iframe[src*="youtube"] {
       display: inline-block;
       list-style: none;
       padding: 0;
+      margin: 0;
 
       li {
         display: inline;
